Bug 69033 - Please add "platform:/meta" URLConnection support (final touches)